app/globals.css
:root {
  --ff-primary: Inter, system-ui, sans-serif;
  --ff-accent: Space Mono, monospace;
  --ff-secondary: "Franklin Gothic Medium", sans-serif;

  color-scheme: light dark;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

body {
  margin: 0;
  font-family: var(--ff-primary);
  font-weight: 500;
  position: relative;
}
.dark {
  --clr-primary-100: #ffffffde;
  --clr-primary-900: #1a1a20;
  --clr-secondary-300: #989797;
  --clr-secondary-700: #383534;
  --clr-secondary-800: #383534;
  --clr-newsletter: #787878;
  --clr-footer: #5b5b5b;
  --clr-footback: #0f0f13;
  --clr-accent-400: #7913a8;
  --clr-submit: #82139880;
  --clr-invert: linear-gradient(135deg, #464650, #27212b);
  --clr-inset: #4f4948;
  --clr-button: #25252d;
  --clr-vinyl: linear-gradient(135deg, #c4c4c4, #787878);
  background-color: var(--clr-primary-900);
  color: var(--clr-primary-100);
}
.light {
  --clr-primary-100: #0f0000de;
  --clr-primary-900: linear-gradient(135deg, #a8acff, #a5bdfd);
  --clr-secondary-300: #260606;
  --clr-secondary-800: #ac00dc;
  --clr-secondary-700: #1a0000;
  --clr-newsletter: #786980;
  --clr-footer: #726677;
  --clr-footback: #1c1320;
  --clr-accent-400: #6d000f;
  --clr-invert: linear-gradient(135deg, #a5bdfd, #b076da);
  --clr-inset: #aa8ee1;
  --clr-submit: #82139880;
  --clr-vinyl: linear-gradient(135deg, #e0cbdc, #886d84);
  --clr-button: #d5d5f3;
  background: var(--clr-primary-900);
  color: var(--clr-primary-100);
}

.header {
  text-align: center;
  position: relative;
  margin-bottom: 8vh;
  background-color: var(--clr-primary-900);
}

.background {
  background-position-x: center;
  background-size: cover;
  background-image: url("/main.png");
  -webkit-mask-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(rgba(0, 0, 0, 1)) 85%,
    to(rgba(0, 0, 0, 0))
  );
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 1) 85%,
    rgba(0, 0, 0, 0)
  );
  height: 70vh;
  @media (min-width: 600px) {
    background-position-y: center;
  }
}

.theme {
  color: #ffffffde;
  mix-blend-mode: difference;
  align-items: center;
  display: flex;
  justify-content: space-evenly;
}

.switch {
  position: absolute;
  right: 15px;
  top: 12px;
  width: 170px;
  z-index: 5;
}

h1 {
  margin-top: -15px;
  margin-bottom: 2vh;
  font-size: clamp(2rem, 10vw, 3.2rem);
  font-weight: 500;
  letter-spacing: clamp(0.1em, 2vw, 0.4em);
  font-family: var(--ff-accent);
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.tag-line {
  margin-inline: 25px;
  margin-bottom: 5vh;
  font-size: 0.8rem;
  font-weight: 300;
  letter-spacing: 0.5em;
  color: var(--clr-secondary-300);
}

a {
  text-decoration: none;
  margin-inline: min(1rem, 2.5vw);
  color: var(--clr-primary-100);
}

.active {
  border-bottom: 1px solid;
  padding-bottom: 3px;
  font-size: min(1.2rem, 4vw);
  color: var(--clr-primary-100);
}

.inactive {
  color: var(--clr-secondary-300);
}

nav {
  margin-top: -2.3rem;
  position: sticky;
  background: transparent;
  top: 0px;
  bottom: auto;
  z-index: 4;
}

.stuck {
  background: var(--clr-primary-900);
  box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
}

.navbar {
  list-style-type: none;
  padding-block: 1rem;
  padding-inline: 0;
  justify-content: space-evenly;
  margin: auto;
}

.navbar > li {
  display: inline;
  margin-inline: clamp(0.3rem, 1vw, 1.5rem);
  font-size: min(1.1rem, 4vw);
  font-weight: 500;
  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
  font-family: var(--ff-accent);
  color: var(--clr-secondary-300);
}

.cart-icon {
  font-size: 1.2rem;
  padding: 0.2rem;
  margin-inline: 0.1rem;
}

nav {
  display: flex;
  justify-content: center;
}

.icons {
  font-size: 1.4rem;
}

h3 {
  font-weight: 400;
  margin-left: clamp(35px, 4.5vw, 75px);
  letter-spacing: 0.1rem;
  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
  margin-bottom: 20px;
  font-size: 1.5rem;
}

.container {
  display: inline-flex;
  width: calc(100% - 20px);
  margin: 0 auto 35px;
  @media (min-width: 900px) {
    width: calc(100% - 80px);
  }
}

.button {
  background-color: transparent;
  border: none;
  color: var(--clr-secondary-300);
  font-size: 2rem;
  margin-inline: -10px;
  width: 40px;
}

.scroller {
  display: flex;
  overflow-x: auto;
  overscroll-behavior-inline: contain;
  scroll-behavior: smooth;
  -ms-overflow-style: none;
  scrollbar-width: none;
  scroll-padding-inline: min(1.5rem, 4vw);
  padding-bottom: 15px;
  mask: linear-gradient(90deg, transparent, white 3%, white 97%, transparent);
  -webkit-mask: linear-gradient(
    90deg,
    transparent,
    white 3%,
    white 97%,
    transparent
  );
}

.scroller::-webkit-scrollbar {
  display: none;
}

.snaps-inline {
  scroll-snap-type: inline mandatory;
}

.snaps-inline > * {
  scroll-snap-align: start;
}

.wrapper {
  display: flex;
  justify-content: center;
}

section {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  background-color: var(--clr-primary-900);
}

.video-section {
  margin-top: none;
}

.card {
  background-color: var(--clr-secondary-800);
  border-radius: 12px;
  box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
  display: flex;
  width: clamp(260px, 30vw, 380px);
  height: clamp(100px, 10vw, 120px);
}

.card img {
  max-width: 100%;
  display: block;
  border-radius: 12px 0px 0px 12px;
}

.contents {
  text-transform: uppercase;
  margin-left: 13px;
  text-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.card h5 {
  letter-spacing: 0.3em;
  font-size: clamp(1rem, 2vw, 1.3rem);
  font-family: var(--ff-secondary);
  margin: 0;
}

.tag {
  letter-spacing: 2px;
  color: var(--clr-secondary-300);
  font-size: clamp(0.5rem, 1vw, 1rem);
}

.videos {
  justify-content: center;
}
/* ... */

